--- a/src/welcome.html
+++ b/src/welcome.html
@@ -24,9 +24,7 @@
         <input id="password-register"  min="1" max="10" required type="password" placeholder="Mật khẩu">
         <input id="password-confirm-register" min="1" max="10" required type="password" placeholder="Xác nhận mật khẩu">
         <p></p>
-        <button type="button" class="btn-regis" id="regis-btn">
-          Đăng Ký
-        </button>
+        <input type="submit" class="btn-regis" id="regis-btn" placeholder="Đăng Ký">
       </form>
     </div>
     <div class="form-container sign-in">
@@ -39,9 +37,8 @@
         <input id="login-password" type="password" required placeholder="Mật khẩu">
         <label>Đăng nhập với tư cách Quản trị viên <input id="admin" class="checkbox" type="checkbox"> </label>
 
-        <button type="button" class="btn-login" id="login-btn">
-          Đăng Nhập
-        </button>
+        <input type="submit" class="btn-login" id="login-btn" placeholder="Đăng Nhập">
+
       </form>
     </div>
     <div class="toggle-container">
