--- a/src/welcome/welcome.html
+++ b/src/welcome/welcome.html
@@ -6,7 +6,7 @@
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   <base href="./">
-  <link rel="stylesheet" type="text/css" href="../src/styles.css">
+  <link rel="stylesheet" type="text/css" href="../welcome/styles.css">
 
   <title>Quản Lý Thư Viện - Welcome</title>
 </head>
@@ -15,7 +15,7 @@
   <div class="container" id="container">
     <div class="form-container sign-up">
       <form id="form-register">
-        <img src="../assets/logo.png" alt="logo">
+        <img src="../../assets/logo.png" alt="logo">
         <p></p>
         <h1>Đăng Ký</h1>
         <p></p>
@@ -23,13 +23,13 @@
         <input type="text" id="username-regis" min="1" max="20" required placeholder="Tên đăng nhập">
         <input id="password-register"  min="1" max="10" required type="password" placeholder="Mật khẩu">
         <input id="password-confirm-register" min="1" max="10" required type="password" placeholder="Xác nhận mật khẩu">
-        <p></p>
-        <input type="submit" class="btn-regis" id="regis-btn" placeholder="Đăng Ký">
+        <p id="customValidityNotification" ></p>
+        <button type="button" class="btn-regis" id="regis-btn">Đăng Ký</button>
       </form>
     </div>
     <div class="form-container sign-in">
       <form id="form-login">
-        <img src="../assets/logo.png" alt="logo">
+        <img src="../../assets/logo.png" alt="logo">
         <p></p>
         <h1>Đăng Nhập</h1>
         <p></p>
@@ -37,7 +37,7 @@
         <input id="login-password" type="password" required placeholder="Mật khẩu">
         <label>Đăng nhập với tư cách Quản trị viên <input id="admin" class="checkbox" type="checkbox"> </label>
 
-        <input type="submit" class="btn-login" id="login-btn" placeholder="Đăng Nhập">
+        <button type="button" class="btn-login" id="login-btn">Đăng Nhập</button>
 
       </form>
     </div>
@@ -60,7 +60,7 @@
       </div>
     </div>
   </div>
-  <script src="../src/renderer.js"></script>
+  <script src="./renderer.js"></script>
 </body>
 
 </html>
