--- a/src/home/index_user.html
+++ b/src/home/index_user.html
@@ -109,7 +109,7 @@
               <th></th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="tableUser">
             <tr id="UID0001">
               <td>UID0001</td>
               <td>Huỳnh Vũ Nhật Linh</td>
@@ -117,7 +117,7 @@
               <td>3004</td>
               <td>
                 <div class="buttons is-right">
-                  <button id="btnUID0001" class="js-modal-trigger button is-small is-primary" type="button"
+                  <button id="mbtnUID0001" class="js-modal-trigger button is-small is-primary" type="button"
                     data-target="modal-modify-user">
                     Sửa
                   </button>
