--- a/src/home/index_book.html
+++ b/src/home/index_book.html
@@ -12,12 +12,191 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Quản Lý Thư Viện</title>
+  <title>Quản Lý Thư Viện - Sách</title>
 </head>
 
 <body>
+  <div>
+    <div id="modal-add-book" class="modal">
+      <div class="modal-background"></div>
+      <div class="modal-content is-align-content-center	">
+        <form>
+          <div class="box " style="height: fit-content; width: 100%;">
+            <div class="field">
+              <label class="label">Mã số a</label>
+              <div class="control">
+                <input id="add-isbn" class="input" type="text" placeholder="" disabled>
+              </div>
+            </div>
+  
+            <div class="field">
+              <label class="label">Tên sách</label>
+              <div class="control">
+                <input id="add-title" class="input" type="text" placeholder="" required>
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column field is-7" style="margin: 0;">
+                <label class="label">Tác giả</label>
+                <div class="control ">
+                  <input id="add-author" class="input" type="text" placeholder="" required>
+                </div>
+              </div>
+              <div class="column field" style="margin: 0;">
+                <label class="label">Chủ đề</label>
+                <div class="select" style="width: 100%;">
+                  <select id="add-subject">
+                    <option value="Văn Học">Văn Học</option>
+                    <option value="Kinh Tế">Kinh Tế</option>
+                    <option value="Tâm Lý - Kỹ Năng Sống">Tâm Lý - Kỹ Năng Sống</option>
+                    <option value="Nuôi Dạy Con">Nuôi Dạy Con</option>
+                    <option value="Sách Thiếu Nhi">Sách Thiếu Nhi</option>
+                    <option value="Giáo Khoa">Giáo Khoa</option>
+                    <option value="Sách Học Ngoại Ngữ">Sách Học Ngoại Ngữ</option>
+                    <option value="Tiểu Sử - Hồi Ký">Tiểu Sử - Hồi Ký</option>
+                  </select>
+                  <!-- <input id ="modify-username" class="input " type="text" placeholder="" required> -->
+                </div>
+              </div>
+            </div>
+  
+            <div class="columns">
+              <div class="column field is-7" style="margin: 0;">
+                <label class="label">Nhà Xuất Bản</label>
+                <div class="control ">
+                  <input id="add-publisher" class="input " type="text" placeholder="" required>
+                </div>
+              </div>
+              <div class="column field " style="margin: 0;">
+                <label class="label"> Ngày Xuất Bản</label>
+                <div class="control ">
+                  <input id="add-publisher-date" class="input " type="date" placeholder="" required>
+                </div>
+              </div>
+            </div>
+  
+            <div class="columns">
+              <div class="column field" style="margin: 0;">
+                <label class="label"> Số trang</label>
+                <div class="control ">
+                  <input id="add-pages" class="input " type="text" placeholder="" required>
+                </div>
+              </div>
+              <div class="column field" style="margin: 0;">
+                <label class="label"> Số bản</label>
+                <div class="control ">
+                  <input id="add-copies" class="input " type="text" placeholder="" required>
+                </div>
+              </div>
+            </div>
+  
+            <div class="field is-grouped buttons is-right	" style="align-items: center; display: flex;">
+              <div class="control  is-align-content-center">
+                <button id="add-submit-button" type="button" class="button is-link">Submit</button>
+              </div>
+              <div class="control  is-align-content-center">
+                <button id="add-cancel-button" type="button" class="button is-link is-light ">Cancel</button>
+              </div>
+            </div>
+          </div>
+  
+        </form>
+      </div>
+  
+      <button class="modal-close is-large" aria-label="close"></button>
+    </div>
+    <div id="modal-modify-book" class="modal">
+      <div class="modal-background"></div>
+  
+      <div class="modal-content is-align-content-center	">
+        <form>
+          <div class="box " style="height: fit-content; width: 100%;">
+            <div class="field">
+              <label class="label">Mã số</label>
+              <div class="control">
+                <input id="isbn" class="input" type="text" placeholder="" disabled>
+              </div>
+            </div>
+  
+            <div class="field">
+              <label class="label">Tên sách</label>
+              <div class="control">
+                <input id="modify-title" class="input" type="text" placeholder="" required>
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column field is-7" style="margin: 0;">
+                <label class="label">Tác giả</label>
+                <div class="control ">
+                  <input id="modify-author" class="input" type="text" placeholder="" required>
+                </div>
+              </div>
+              <div class="column field" style="margin: 0;">
+                <label class="label">Chủ đề</label>
+                <div class="select" style="width: 100%;">
+                  <select id="modify-subject">
+                    <option value="Văn Học">Văn Học</option>
+                    <option value="Kinh Tế">Kinh Tế</option>
+                    <option value="Tâm Lý - Kỹ Năng Sống">Tâm Lý - Kỹ Năng Sống</option>
+                    <option value="Nuôi Dạy Con">Nuôi Dạy Con</option>
+                    <option value="Sách Thiếu Nhi">Sách Thiếu Nhi</option>
+                    <option value="Giáo Khoa">Giáo Khoa</option>
+                    <option value="Sách Học Ngoại Ngữ">Sách Học Ngoại Ngữ</option>
+                    <option value="Tiểu Sử - Hồi Ký">Tiểu Sử - Hồi Ký</option>
+                  </select>
+                  <!-- <input id ="modify-username" class="input " type="text" placeholder="" required> -->
+                </div>
+              </div>
+            </div>
+  
+            <div class="columns">
+              <div class="column field is-7" style="margin: 0;">
+                <label class="label">Nhà Xuất Bản</label>
+                <div class="control ">
+                  <input id="modify-publisher" class="input " type="text" placeholder="" required>
+                </div>
+              </div>
+              <div class="column field " style="margin: 0;">
+                <label class="label"> Ngày Xuất Bản</label>
+                <div class="control ">
+                  <input id="modify-publisher-date" class="input " type="date" placeholder="" required>
+                </div>
+              </div>
+            </div>
+  
+            <div class="columns">
+              <div class="column field" style="margin: 0;">
+                <label class="label"> Số trang</label>
+                <div class="control ">
+                  <input id="modify-pages" class="input " type="text" placeholder="" required>
+                </div>
+              </div>
+              <div class="column field" style="margin: 0;">
+                <label class="label"> Số bản</label>
+                <div class="control ">
+                  <input id="modify-copies" class="input " type="text" placeholder="" required>
+                </div>
+              </div>
+            </div>
+  
+            <div class="field is-grouped buttons is-right	" style="align-items: center; display: flex;">
+              <div class="control  is-align-content-center">
+                <button id="modify-submit-button" type="button" class="button is-link">Submit</button>
+              </div>
+              <div class="control  is-align-content-center">
+                <button id="modify-cancel-button" type="button" class="button is-link is-light ">Cancel</button>
+              </div>
+            </div>
+          </div>
+  
+        </form>
+      </div>
+  
+      <button class="modal-close is-large" aria-label="close"></button>
+    </div>
+  </div>
   <div class="container is-fullhd columns is-gapless">
-    <nav class=" has-background-link-light column is-3">
+    <nav class=" has-background-link-light column is-3 ">
       <aside>
         <section class="hero">
           <div class="hero-body">
@@ -27,9 +206,9 @@
           </div>
         </section>
         <div class="menu">
-          <ul class="menu-list">
+          <ul class="menu-list ">
             <li>
-              <a class="is-active" href="#">
+              <a class="is-active " href="#">
                 <i class='bx bx-book icon'></i>
                 <span>Sách</span>
               </a>
@@ -50,24 +229,104 @@
         </div>
       </aside>
     </nav>
-    <div class=" column is-9 ">
-      <div class="box content">
+    <div class=" column is-9 is-gapless ">
+      <div class="box content is-gapless has-background-warning-light">
+        <div id="Bar" class="columns main-bar is-gapless has-background-primary ">
+            <div class="column is-10 ">
+              <div class="columns is-multiline" style="width: 100%;">
+                <div class="column is-full ">
+                  <input id="searchBar" class="input is-rounded is-link is-normal " style="width: 100%; " type="search" placeholder="Tìm kiếm Tên Sách hoặc Tác Giả">
+                </div>
+                <div class="column is-3">
+                  <div class="select is-danger is-rounded is-small" style="width: 100%;">
+                    <select id="filter-subject" style="width: 100%;">
+                      <option value="Tất cả">Tất cả</option>
+                      <option value="Văn Học">Văn Học</option>
+                      <option value="Kinh Tế">Kinh Tế</option>
+                      <option value="Tâm Lý - Kỹ Năng Sống">Tâm Lý - Kỹ Năng Sống</option>
+                      <option value="Nuôi Dạy Con">Nuôi Dạy Con</option>
+                      <option value="Sách Thiếu Nhi">Sách Thiếu Nhi</option>
+                      <option value="Giáo Khoa">Giáo Khoa</option>
+                      <option value="Sách Học Ngoại Ngữ">Sách Học Ngoại Ngữ</option>
+                      <option value="Tiểu Sử - Hồi Ký">Tiểu Sử - Hồi Ký</option>
+                    </select>
+                    <!-- <input id ="modify-username" class="input " type="text" placeholder="" required> -->
+                  </div>
+                </div>
+                <div class="column is-3">
+                  <div class="select is-warning is-rounded is-small" style="width: 100%;">
+                    <select id="filter-publisher" style="width: 100%;">
+                      <option value="Tất cả">Tất cả</option>
+                    </select>
+                    <!-- <input id ="modify-username" class="input " type="text" placeholder="" required> -->
+                  </div>
+                </div>
+                <div class="column is-3">
+                  <div class="select is-info is-rounded is-small" style="width: 100%;">
+                    <select id="filter-year" style="width: 100%;">
+                      <option value="Tất cả">Tất cả</option>
+                    </select>
+                    <!-- <input id ="modify-username" class="input " type="text" placeholder="" required> -->
+                  </div>
+                </div>
 
+              </div>
+            </div>
+            <div class="column is-large ">
+              <button class="js-add-modal-trigger button is-large is-warning	 " type="button"
+            data-target="modal-add-book">
+            Thêm Sách
+          </button>
+            </div>
+          
+          
+        </div>
+        <div class="table-container ">
+          <table class="has-text-centered">
+            <thead class="has-background-warning is-size-7  has-text-weight-bold">
+              <tr>
+                <th>MÃ SỐ</th>
+                <th colspan="3">TÊN SÁCH</th>
+                <th colspan="2">CHỦ ĐỀ</th>
+                <th colspan="2">TÁC GIẢ</th>
+                <th colspan="2">NHÀ XUẤT BẢN</th>
+                <th>NGÀY XUẤT BẢN</th>
+                <th>SỐ TRANG</th>
+                <th>SỐ BẢN CÒN LẠI</th>
+                <th colspan="2">THAO TÁC</th>
+              </tr>
+            </thead>
+            <tbody id="tableBook" class="is-size-7 has-background-warning-light has-text-centered">
+              <tr id="BID0001">
+                <td>BID0002</td>
+                <td colspan="3" class="has-text-weight-bold has-text-justified">Sổ Đỏ</td>
+                <td colspan="2">Giáo Khoa</td>
+                <td colspan="2" class="has-text-justified">Nguyễn Trọng Phụng</td>
+                <td colspan="2" class="has-text-justified">NXB Kim Đồng</td>
+                <td>25/01/2004</td>
+                <td>102 trang</td>
+                <td>300 bản</td>
+                <td colspan="2">
+                  <div class="buttons is-right ">
+                    <button id="mbtnBID0001" class="js-modal-trigger button is-small is-primary" type="button"
+                      data-target="modal-modify-book">
+                      Sửa
+                    </button>
+                    <button id="btnBID0001" class="button is-small is-danger is-light" type="button">
+                      Xóa
+                    </button>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-
     </div>
   </div>
 
   </div>
-  <script>
-    $("td").hover(
-      function () {
-        $(this).addClass('is-selected');
-      },
-      function () {
-        $(this).removeClass('is-selected');
-      }
-    );
+  <script src="../../src/home/renderer_book.js">
   </script>
 </body>
 
