--- a/src/home_user/index.html
+++ b/src/home_user/index.html
@@ -52,7 +52,22 @@
     </nav>
     <div class=" column is-9 ">
       <div class="box content">
-
+        <section class="hero is-small is-primary">
+          <div class="hero-body">
+            <p class="title is-size-4" style="margin: 5px;">
+              Dự án Quản lý Thư Viện
+            </p>
+            <p class="subtitle is-size-6"style="margin: 5px;">
+              Công nghệ : Electron JS
+            </p>
+            <p class="subtitle is-size-6"style="margin: 5px;">
+              Hệ Quản trị CSDL : SQLite
+            </p>
+            <p class="subtitle is-size-6"style="margin: 5px;">
+              Sinh viên Huỳnh Vũ Nhật Linh
+            </p>
+          </div>
+        </section>
       </div>
 
     </div>
